[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
anyhow = "1.0.80"
itertools = "0.12.0"
egui = "0.26.2"
eframe = "0.26.2"
egui_plot = "0.26.2"
egui_extras = { version = "0.26.2", features = ["svg", "image"] }
epaint = "0.26.2"
image = "0.24.1"
imageproc = "0.23.0"
log = { version = "0.4", features = ["std"] }
env_logger = "0.11.3"
lazy_static = "1.4.0"
