[package]
name = "minesofrust"
description = "Simple Minesweeper clone"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Kevin M. Gill <apoapsys@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kmgill/minesweeper"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
anyhow = "1.0.80"
itertools = "0.12.0"
egui = "0.27.0"
eframe = "0.27.0"
egui_plot = "0.27.0"
egui_extras = { version = "0.27.0", features = ["svg", "image"] }
epaint = "0.27.0"
image = "0.25.0"
imageproc = "0.24.0"
log = { version = "0.4", features = ["std"] }
env_logger = "0.11.3"
lazy_static = "1.4.0"
chrono = "0.4.19"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
dirs = "5.0.0"
toml = "0.8.2"
whoami = "1.5.1"

[package.metadata.deb]
maintainer = "Kevin M. Gill <apoapsys@gmail.com>"
copyright = "2024, Kevin M. Gill <apoapsys@gmail.com>"
license-file = ["LICENSE", "2"]
extended-description = "Lightweight Minesweeper Clone"
depends = "$auto"
section = "games"
priority = "optional"
assets = [
    [
        "target/release/minesofrust",
        "/usr/bin/minesofrust",
        "755",
    ],
    [
        "README.md",
        "/usr/share/doc/minesofrust/README",
        "644",
    ],
    [
        "assets/mine.png",
        "/usr/share/icons/hicolor/64x64/apps/minesofrust.png",
        "644",
    ],
    [
        "assets/minesofrust.desktop",
        "/usr/share/applications/minesofrust.desktop",
        "644",
    ],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/minesofrust", dest = "/usr/bin/minesofrust", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/minesofrust/README", mode = "644" },
    { source = "assets/mine.png", dest = "/usr/share/icons/hicolor/64x64/apps/minesofrust.png", mode = "644" },
    { source = "assets/minesofrust.desktop", dest = "/usr/share/applications/minesofrust.desktop", mode = "644" },
]
